# pyseed

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/flask/: README.md  requirements.txt
examples/flask/.flask-seed/app/views/: {{#blueprints}}.py.jinja2
examples/flask/app/: __init__.py
examples/flask/app/models/: __init__.py  user.py
examples/flask/app/seeds/dashboard/: audit  home  profile
examples/flask/app/seeds/public/: blog  index  login  post  signup
examples/flask/app/templates/dashboard/: audit.html  home.html  profile.html
examples/flask/app/tools/: __init__.py
examples/flask/app/views/: dashboard.py  public.py
src/py3seed/: __init__.py  __main__.py  admin.py  cachesupport.py  error.py  ext.py  inflection.py  log.py  merge3.py  model.py  mongosupport.py  utils.py  websupport.py
src/py3seed/commands/: __init__.py  gen.py
src/pyseed/: __init__.py  __main__.py  error.py  log.py  model.py  mongosupport.py  utils.py
src/pyseed/commands/: gen.py
tests/: .pyseed-includes  .pyseed-properties  __init__.py  conftest.py  test_cachesupport.py  test_gen.py  test_merge3.py  test_model.py  test_mongosupport.py  test_websupport.py
tests/core/: __init__.py
tests/core/models/: __init__.py
tests/www/static/js/: enums.js  enums.js.jinja2
tests/www/templates/: render_env.txt.jinja2
tests/www/templates/admin-demo/: users.html
tests/www/templates/public/: profile.html  profile.html.1  render_env.txt  team-members.html  team-members.html.1
tests/www/templates/{{#blueprints}}/: render_env.txt.jinja2  {{#views}}.html.jinja2
tests/www/views/: __init__.py  admin_demo.py  public.py  public.py.0  {{#blueprints}}.py.jinja2
(+54 files in other folders)
