[metadata]
name = py3seed
version = 0.0.2
author = Samuel Feng
author_email = okosioc@gmail.com 
description = A package that bootstraps your project by simple data models definition and auto api and user interface generation 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/okosioc/pyseed
project_urls =
    Bug Tracker = https://github.com/okosioc/pyseed/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
